# AWS2022-10-24

./: .gitignore  README.md  pyproject.toml
website/: db.sqlite3  manage.py
website/gallery/: models.py  sitemap.py  urls.py  views.py
website/gallery/migrations/: 0001_initial.py  0002_alter_category_options_alter_photo_options_and_more.py
website/guessing_number/: apps.py  models.py  urls.py  views.py
website/guessing_number/migrations/: 0001_initial.py
website/static/css/: style.css  style_apex.css
website/static/js/: scroll.js
website/staticfiles/css/: style.css  style_apex.css
website/templates/: 403.html  404.html  apex_data.html  apex_data.html.bak  index.html  index.html.bak  juken_sugaku.html  leaderboard.html  license.html  play.html  timer.html
website/templates/gallery/: 403.html  404.html  add.html  delete.html  gallery.html  photo.html
website/website/: settings.py  settings.py.bak  urls.py  urls.py.bak  views.py
website/website/settings/: base.py  dev.py  prod.py
