[tool.poetry]
name = "django-dev"
version = "0.1.0"
description = ""
authors = ["Chloro989 <seisouinn@gmail.com>"]
readme = "README.md"
packages = [{include = "django_dev"}]

[tool.poetry.dependencies]
python = "3.10.6"
Django = "^4.2.2"
environ = "^1.0"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
boto3 = "^1.26.155"
django-storages = {extras = ["azure"], version = "^1.13.2"}
python-dotenv = "^1.0.0"
django-allauth = "^0.54.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
